Fixed sending, caching, and retrieving prefetched query results for distributed transactions. I think we're in business.
Look at that now! One piece of my disseration project is now complete and ready for experiments! Moving on up...